--- a/easyray-framework-core/easyray-framework-core-properties/src/main/resources/application-common.yml
+++ b/easyray-framework-core/easyray-framework-core-properties/src/main/resources/application-common.yml
@@ -1,7 +1,3 @@
-mysql:
-  host: 192.168.99.240:3309
-redis:
-  host: 192.168.10.11
 nacos:
   host: 192.168.10.11:8848
 
@@ -9,13 +5,13 @@ nacos:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${mysql.host}/wyy_easyray?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://192.168.99.240:3309/wyy_easyray?useUnicode=true&characterEncoding=utf8
     username: wangyuyuan
     password: wangyuyuan
     type: com.alibaba.druid.pool.DruidDataSource
   #redis
   redis:
-    host: ${redis.host}
+    host: 192.168.10.11
     port: 6379
 #utf-8
 server:
